--- a/app/views/partials/post.jade
+++ b/app/views/partials/post.jade
@@ -5,7 +5,7 @@
           h3.panel-title {{post.title}}
         .panel-body
           div.pull-right
-            a(ng-href='/posts/{{post.urlize}}') {{ post.createdAt | date:'EEE, d MMM yyyy HH:mm:ss' }}
+            a(ng-href='/post/{{post.urlize}}') {{ post.createdAt | date:'EEE, d MMM yyyy HH:mm:ss' }}
           div(marked='post.body')
           hr
           div(disqus="post.urlize")
