--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -109,3 +109,29 @@ border-bottom-color: transparent;
 .post {
   margin: 1em 0.5em
 }
+
+.ng-enter, .ng-leave {
+  /*transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;*/
+  /*transition:all cubic-bezier(0.42, 0.0, 0.58, 1) 0.3s;*/
+  transition:all cubic-bezier(0.0, 0.0, 1.0, 1.0) 0.5s;
+
+  display:block;
+  width:100%;
+
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  padding-top: 50px;
+}
+
+.ng-enter {
+  left:100%;
+}
+.ng-enter.ng-enter-active {
+  left:0;
+}
+.ng-leave.ng-leave-active {
+  left:-200%;
+}
