--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -33,7 +33,8 @@ html.no-js
     // Add your site or application content here
     include partials/navbar
     div(role='main')
-      div.container(ng-view)
+      div.container
+        div(ng-view)
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     script.
@@ -46,9 +47,7 @@ html.no-js
     <!-- bower:js -->
     <script src="bower_components/marked/lib/marked.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-marked/angular-marked.js"></script>
@@ -62,14 +61,7 @@ html.no-js
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/navbar.js"></script>
-    <script src="scripts/controllers/login.js"></script>
-    <script src="scripts/controllers/signup.js"></script>
-    <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/post.js"></script>
-    <script src="scripts/services/auth.js"></script>
-    <script src="scripts/services/session.js"></script>
-    <script src="scripts/services/user.js"></script>
-    <script src="scripts/directives/mongooseError.js"></script>
     <script src="scripts/filters/urlize.js"></script>
     <script src="scripts/services/post.js"></script>
     <!-- endbuild -->
