--- a/app/views/partials/navbar.jade
+++ b/app/views/partials/navbar.jade
@@ -13,19 +13,10 @@ header.navbar.navbar-default.navbar-fixed-top(ng-controller='NavbarCtrl')
           a.navbar-brand(href='/', role='button') cesarandreu
           li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
             a(ng-href='{{item.link}}') {{item.title}}
-        ul.nav.navbar-nav.navbar-right
-          li(ng-show='currentUser', ng-class='{active: isActive("/settings")}')
-            a(href='/settings') Settings
-          li(ng-show='currentUser', ng-class='{active: isActive("/logout")}')
-            a(href='', ng-click='logout()') Logout
       nav.visible-xs.ng-cloak(collapse='!isCollapsed')
         ul.nav.navbar-nav
           li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-            a(ng-href='{{item.link}}', ng-click='isCollapsed = !isCollapsed') {{item.title}}
-          li(ng-show='currentUser', ng-class='{active: isActive("/settings")}')
-            a(href='/settings') Settings
-          li(ng-show='currentUser', ng-class='{active: isActive("/logout")}')
-            a(href='', ng-click='logout()') Logout
+            a(ng-href='{{item.link}}', ng-click='toggleIsCollapsed()') {{item.title}}
 
 .header-placeholder
 
