--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -66,5 +66,6 @@ html.no-js
     <script src="scripts/controllers/post.js"></script>
     <script src="scripts/filters/urlize.js"></script>
     <script src="scripts/services/post.js"></script>
+    <script src="scripts/services/title.js"></script>
     <!-- endbuild -->
 
