--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -43,7 +43,7 @@ html.no-js
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-20550824-2', 'blog.cesarandreu.com');
+      ga('create', 'UA-20550824-2', 'cesarandreu.com');
 
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
