--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -68,6 +68,8 @@ html.no-js
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/routes.js"></script>
+    <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/navbar.js"></script>
     <script src="scripts/controllers/post.js"></script>
