--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -181,3 +181,39 @@ border-bottom-color: transparent;
   -moz-transform:translate3d(100px, 0, 0);
   transform:translate3d(100px, 0, 0);
 }
+
+.loading-indicator {
+  position: fixed;
+  z-index: 9999;
+  top: 50px;
+  left: 50%;
+}
+
+.loading-box {
+  position: relative;
+  left: -50%;
+  background: #f5f5f5;
+  border: solid #dddddd;
+  border-width: 1px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  min-width: 120px;
+}
+
+.loading-text {
+  margin: 0 auto;
+  text-align: center;
+  font-weight: bold;
+}
+
+.spinner {
+  margin: 0 40px;
+  width: 40px;
+  height: 40px;
+  -webkit-animation:spin 3s linear infinite;
+  -moz-animation:spin 3s linear infinite;
+  animation:spin 3s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
