--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,8 +11,8 @@ html.no-js
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     base(href="/")
     title Cesar Andreu's Blog
-    meta(name="description", content="")
-    meta(name="viewport", content="width=device-width")
+    meta(name="description", content="Cesar Andreu's blog")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     // Place favicon.ico and apple-touch-icon.png in the root directory
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
